feat: add optional authenticator 2FA
